--- a/Rickipedia/Custom Views/EpisodeView/EpisodeView.xib
+++ b/Rickipedia/Custom Views/EpisodeView/EpisodeView.xib
@@ -49,7 +49,7 @@
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <point key="canvasLocation" x="131.8840579710145" y="-79.6875"/>
+            <point key="canvasLocation" x="36" y="-63"/>
         </view>
     </objects>
 </document>
