--- a/Rickipedia/Custom Views/EpisodeView/EpisodeView.xib
+++ b/Rickipedia/Custom Views/EpisodeView/EpisodeView.xib
@@ -9,16 +9,19 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="EpisodeView" customModule="Rickipedia" customModuleProvider="target">
             <connections>
+                <outlet property="airDate" destination="iU2-4r-qAR" id="zeJ-FG-P2Y"/>
                 <outlet property="contentView" destination="iN0-l3-epB" id="jjh-jF-2aG"/>
+                <outlet property="slug" destination="mps-0G-qFU" id="Y0Y-AL-252"/>
+                <outlet property="title" destination="cbX-z5-ulZ" id="A0c-U2-n47"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="200"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="63"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" distribution="fillProportionally" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="qbk-T3-bRs">
-                    <rect key="frame" x="10" y="10" width="394" height="42.5"/>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="qbk-T3-bRs">
+                    <rect key="frame" x="10" y="10" width="394" height="43"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Close Rick-counters of the Rick Kind" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cbX-z5-ulZ">
                             <rect key="frame" x="0.0" y="0.0" width="394" height="20.5"/>
@@ -27,16 +30,16 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="267" translatesAutoresizingMaskIntoConstraints="NO" id="EC7-rt-aBE">
-                            <rect key="frame" x="0.0" y="25.5" width="394" height="17"/>
+                            <rect key="frame" x="0.0" y="25.5" width="394" height="17.5"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="S01E10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mps-0G-qFU">
-                                    <rect key="frame" x="0.0" y="0.0" width="47.5" height="17"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="47.5" height="17.5"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <color key="textColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="April 7, 2014" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iU2-4r-qAR">
-                                    <rect key="frame" x="314.5" y="0.0" width="79.5" height="17"/>
+                                    <rect key="frame" x="314.5" y="0.0" width="79.5" height="17.5"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <color key="textColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
                                     <nil key="highlightedColor"/>
@@ -47,9 +50,18 @@
                 </stackView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="qbk-T3-bRs" secondAttribute="bottom" constant="10" id="2aN-KL-byP"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="qbk-T3-bRs" secondAttribute="trailing" constant="10" id="Pxo-N8-3Pb"/>
+                <constraint firstItem="qbk-T3-bRs" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="10" id="czl-sN-YBJ"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="qbk-T3-bRs" secondAttribute="bottom" constant="10" id="jSt-To-XIg"/>
+                <constraint firstItem="qbk-T3-bRs" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="jtU-SA-MI3"/>
+            </constraints>
+            <nil key="simulatedTopBarMetrics"/>
+            <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <point key="canvasLocation" x="36" y="-63"/>
+            <point key="canvasLocation" x="34.782608695652179" y="-104.12946428571428"/>
         </view>
     </objects>
 </document>
