--- a/Rickipedia/Views/Base.lproj/Main.storyboard
+++ b/Rickipedia/Views/Base.lproj/Main.storyboard
@@ -65,10 +65,50 @@
                     <view key="view" contentMode="scaleToFill" id="ahC-9J-jF5">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="63" estimatedRowHeight="63" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0Ea-Ll-r4K">
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="EpisodeCell" id="JSa-8k-FNr" customClass="EpisodeCell" customModule="Rickipedia" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="63"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="JSa-8k-FNr" id="fK7-qa-eCU">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="63"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lWW-Ei-FeA" customClass="EpisodeView" customModule="Rickipedia" customModuleProvider="target">
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="63"/>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="lWW-Ei-FeA" secondAttribute="bottom" id="6h3-Iw-7kG"/>
+                                                <constraint firstItem="lWW-Ei-FeA" firstAttribute="leading" secondItem="fK7-qa-eCU" secondAttribute="leading" id="Mct-Kh-1Rp"/>
+                                                <constraint firstItem="lWW-Ei-FeA" firstAttribute="top" secondItem="fK7-qa-eCU" secondAttribute="top" id="boW-Jq-sbu"/>
+                                                <constraint firstAttribute="trailing" secondItem="lWW-Ei-FeA" secondAttribute="trailing" id="ofT-xn-poa"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="episodeView" destination="lWW-Ei-FeA" id="Wma-j6-HFy"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="0Ea-Ll-r4K" firstAttribute="leading" secondItem="ckc-fC-hUD" secondAttribute="leading" id="awI-1M-sKv"/>
+                            <constraint firstItem="ckc-fC-hUD" firstAttribute="bottom" secondItem="0Ea-Ll-r4K" secondAttribute="bottom" id="upG-LV-2qY"/>
+                            <constraint firstItem="ckc-fC-hUD" firstAttribute="trailing" secondItem="0Ea-Ll-r4K" secondAttribute="trailing" id="vGx-JJ-cjb"/>
+                            <constraint firstItem="0Ea-Ll-r4K" firstAttribute="top" secondItem="ckc-fC-hUD" secondAttribute="top" id="zWJ-5m-YsY"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="ckc-fC-hUD"/>
                     </view>
                     <navigationItem key="navigationItem" id="0X8-0a-KmF"/>
+                    <connections>
+                        <outlet property="episodesTableView" destination="0Ea-Ll-r4K" id="IcB-JY-5JA"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tiO-VI-lhP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
